# food-service

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml
src/: aggregator.rs  api.rs  construct_page.rs  local_data.rs  main.rs  model.rs  repository.rs  transport.rs
src/category/: model.rs  repository.rs
src/model/: category.rs  mod.rs  restaurant.rs
src/restaurant/: model.rs  repository.rs
static/: style.css
templates/: base.hbs  home.hbs  list.hbs  restaurant.hbs
