[package]
name = "food-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
